@@ -306,6 +306,9 @@
           option.
   * Fix Drop Percent Today:
     - Update: AST_timeonVDADall.php.
+  * Add upstream Rev. 3052:
+    - Update: bin/ADMIN_keepalive_ALL.pl: Added vicidial_list stuck
+        QUEUE reset at TEoD
 
 2.25.27
   [Jörg Fring-Fürst]
